Reverting bio photos, removing un-needed publication links, adjusting tab height, a few mobile line-height adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -88,19 +88,7 @@
                         <div class="ten columns">
                             <a href="bio_michael-jaff.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_michael-jaff.jpg"></div>
-                                        <div data-src="/images/photo_michael-jaff@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_michael-jaff.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_michael-jaff.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_michael-jaff.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Michael R. Jaff, <span itemprop="honorificSuffix">D.O.</span></span><span itemprop="jobTitle">Founder and Director</span></p></figcaption>
                                 </figure>
                             </a>
@@ -108,19 +96,7 @@
                         <div class="ten columns">
                             <a href="bio_debra-jaff.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
-                                        <div data-src="/images/photo_debra-jaff@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_debra-jaff.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_debra-jaff.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Debra Jaff</span><span itemprop="jobTitle">Title</span></p></figcaption>
                                 </figure>
                             </a>
@@ -130,19 +106,7 @@
                         <div class="ten columns">
                             <a href="bio_gail-hadley.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_gail-hadley.jpg"></div>
-                                        <div data-src="/images/photo_gail-hadley@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_gail-hadley.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_gail-hadley.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_gail-hadley.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Gail L. Hadley, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Director</span></p>
                                     </figcaption>
                                 </figure>
@@ -151,19 +115,7 @@
                         <div class="ten columns">
                             <a href="bio_sandra-croteau.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_sandra-croteau.jpg"></div>
-                                        <div data-src="/images/photo_sandra-croteau@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_sandra-croteau.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_sandra-croteau.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_sandra-croteau.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Sandra M. Croteau, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
@@ -173,19 +125,7 @@
                         <div class="ten columns">
                             <a href="bio_josh-beckman.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
-                                        <div data-src="/images/photo_josh-beckman@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_josh-beckman.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_josh-beckman.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Josh Beckman</span><span itemprop="jobTitle">Title?</span></p></figcaption>
                                 </figure>
                             </a>
@@ -193,19 +133,7 @@
                         <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_victoria-sova.jpg"></div>
-                                        <div data-src="/images/photo_victoria-sova@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_victoria-sova.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_victoria-sova.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_victoria-sova.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Victoria B. Sova, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
@@ -223,19 +151,7 @@
                         <div class="ten columns">
                             <a href="bio_mary-ramos.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
-                                        <div data-src="/images/photo_mary-ramos@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_mary-ramos.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_mary-ramos.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Mary Ramos</span><span itemprop="jobTitle">Office Administrator</span></p></figcaption>
                                 </figure>
                             </a>
@@ -245,19 +161,7 @@
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
-                                    <div data-picture data-alt="">
-                                        <div data-src="/images/photo_justin-mcneil.jpg"></div>
-                                        <div data-src="/images/photo_justin-mcneil@2x.jpg" data-media="(min-width: 768px) and (-webkit-min-device-pixel-ratio: 2.0)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_justin-mcneil.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_justin-mcneil.jpg" alt="" />
-                                        </noscript>
-                                    </div>
+                                    <img src="/images/photo_justin-mcneil.jpg" alt="" />
                                     <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Title?</span></p></figcaption>
                                 </figure>
                             </a>
@@ -656,7 +560,7 @@
                             <p>Rocha-Singh K, <b>Jaff MR</b>, Kelley LE</p>
                         </div>
                         <div class="slide"> <!-- Slide 9 -->
-                            <h3><a href="#" target="_blank">Standardized evaluation and reporting of stent fractures in clinical trials of non-coronary devices</a></h3>
+                            <h3>Standardized evaluation and reporting of stent fractures in clinical trials of non-coronary devices</h3>
                             <p class="date">2006;13:701-710</p>
                             <h4>Journal of Endovascular Therapy</h4>
                             <p><b>Jaff MR</b>, Dake MD, Popma JJ, Ansel G, Yoder T</p>
@@ -674,13 +578,13 @@
                             <p><b>Jaff MR</b>, Hadley G, Hermiller JB, Simonton C, Hinohara T, Cannon L, Reisman M, Braden G, Fletcher DR, Zapien M, Chou T, DiDonato K</p>
                         </div>
                         <div class="slide"> <!-- Slide 6 -->
-                            <h3><a href="#" target="_blank">Stent revascularization for the prevention of cardiovascular and renal events among patients with renal artery stenosis and systolic hypertension: Rationale and design of the CORAL trial.</a></h3>
+                            <h3>Stent revascularization for the prevention of cardiovascular and renal events among patients with renal artery stenosis and systolic hypertension: Rationale and design of the CORAL trial.</h3>
                             <p class="date">2006;152:59-66</p>
                             <h4>American Heart Journal</h4>
                             <p>Cooper CJ, Murphy TP, Matsumoto A, Steffes M, Cohen DJ, <b>Jaff MR</b>, Kuntz R, Jamerson K, Reid D, Rosenfield KA, Rundback JH, D’Agostino R, Henrich W, Dworkin L</p>
                         </div>
                         <div class="slide"> <!-- Slide 5 -->
-                            <h3><a href="#" target="_blank">Protected carotid stenting in high-risk patients with severe carotid artery stenosis.</a></h3>
+                            <h3>Protected carotid stenting in high-risk patients with severe carotid artery stenosis.</h3>
                             <p class="date">2006;47:2384-9</p>
                             <h4>Journal of  the American College of Cardiology</h4>
                             <p>Safian RD, Bresnahan JF, <b>Jaff MR</b>, Foster M, Bacharach JM, Maini B, Turco M, Myla S, Eles G, Ansel GM</p>
