Content edits made, titles for bios are in, and Expertise PubMed buttons removed

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                             <a href="bio_debra-jaff.html" class="reveal">
                                 <figure>
                                     <img src="/images/photo_debra-jaff.jpg" alt="" />
-                                    <figcaption><p><span itemprop="name">Debra Jaff</span><span itemprop="jobTitle">Title</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -126,7 +126,7 @@
                             <a href="bio_josh-beckman.html" class="reveal">
                                 <figure>
                                     <img src="/images/photo_josh-beckman.jpg" alt="" />
-                                    <figcaption><p><span itemprop="name">Josh Beckman</span><span itemprop="jobTitle">Title?</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Joshua Beckman, MD</span><span itemprop="jobTitle">Physician Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -162,7 +162,7 @@
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
                                     <img src="/images/photo_justin-mcneil.jpg" alt="" />
-                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Title?</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Administrative Staff</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -191,7 +191,7 @@
             </div>
             <div class="row">
                 <div class="eighteen columns centered">
-                    <h3 class="bubble">Some of the trials in which we&rsquo;ve been involved</h3>
+                    <h3 class="bubble">The VasCore Innovation Strategies</h3>
                 </div>
             </div>
 
@@ -225,7 +225,6 @@
                                 </div>
                             </div>
                             <div class="slideactions">
-                                <a href="#" class="btn" target="_blank">View on PubMed</a>
                                 <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
@@ -256,7 +255,6 @@
                                 </div>
                             </div>
                             <div class="slideactions">
-                                <a href="#" class="btn" target="_blank">View on PubMed</a>
                                 <a href="casestudy2_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
@@ -287,7 +285,6 @@
                                 </div>
                             </div>
                             <div class="slideactions">
-                                <a href="#" class="btn" target="_blank">View on PubMed</a>
                                 <a href="casestudy3_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
@@ -318,7 +315,6 @@
                                 </div>
                             </div>
                             <div class="slideactions">
-                                <a href="#" class="btn" target="_blank">View on PubMed</a>
                                 <a href="casestudy4_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
@@ -349,7 +345,6 @@
                                 </div>
                             </div>
                             <div class="slideactions">
-                                <a href="#" class="btn" target="_blank">View on PubMed</a>
                                 <a href="casestudy5_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
@@ -391,12 +386,12 @@
                         <li><span>Bioresorbable stents</span></li>
                         <li><span>Atherectomy devices</span></li>
                         <li><span>Thrombectomy devices</span></li>
-                        <li><span>Percutaenous venous valves</span></li>
+                        <li><span>Percutaneous venous valves</span></li>
                         <li><span>Endoluminal aortic stent-grafts</span></li>
-                        <li><span>Endovascular bracytherapy catheters</span></li>
+                        <li><span>Endovascular brachytherapy catheters</span></li>
                     </ul></div>
 
-                    <h3>Trials we&rsquo;ve conducted:</h3>
+                    <h3>VasCore Trial Types:</h3>
                     <div class="clearfix"><ul class="single">
                         <li><span>First in human trials</span></li>
                         <li><span>Single center observational studies</span></li>
@@ -422,7 +417,7 @@
                         <li><span>Infrapopliteal Arteries</span></li>
                         <li><span>Superficial and deep venous systems</span></li>
                     </ul></div>
-                    <h3>Sponsors we work with:</h3>
+                    <h3>VasCore Collaborations:</h3>
                     <div class="clearfix"><ul class="single">
                         <li><span>Commercial medical technology companies</span></li>
                         <li><span>Researchers and physicians from around the world</span></li>
