DD#11 Added final links to all Publication slides

--- a/public/index.html
+++ b/public/index.html
@@ -483,127 +483,127 @@
                 <div class="row">
                     <div class="slides twenty columns centered">
                         <div class="slide"> <!-- Slide 21 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/22422738" target="_blank">Excimer laser with adjunctive balloon angioplasty and heparin coated self expanding stent grafts for the treatment of femoropopliteal artery in-stent restenosis: twelve month results from the SALVAGE trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22422738" target="_blank">Excimer laser with adjunctive balloon angioplasty and heparin coated self expanding stent grafts for the treatment of femoropopliteal artery in-stent restenosis: twelve month results from the SALVAGE trial.</a></h3>
                             <p class="date">2012; Mar 15</p>
                             <h4>Catheterization and Cardiovascular Interventions</h4>
                             <p>Laird JR, Yeo KK, Rocha-Singh K, Das T, Joye J, Dippel E, Reddy B, Botti C, <b>Jaff MR</b></p>
                         </div>
                         <div class="slide"> <!-- Slide 20 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/22511402" target="_blank">Significant reduction in systolic blood pressure following renal artery stenting in patients with uncontrolled hypertension: results from the HERCULES trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22511402" target="_blank">Significant reduction in systolic blood pressure following renal artery stenting in patients with uncontrolled hypertension: results from the HERCULES trial.</a></h3>
                             <p class="date">2012</p>
                             <h4>Catheterization and Cardiovascular Interventions</h4>
                             <p><b>Jaff MR</b>, Bates M, Sullivan T, Popma JJ, Gao X, Zaugg M, Verta P</p>
                         </div>
                         <div class="slide"> <!-- Slide 19 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/22313193" target="_blank">Nitinol stent implantation vs balloon angioplasty for lesions in the superficial femoral and proximal popliteal arteries of patients with claudication: three year follow up of the randomized RESILIENT trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22313193" target="_blank">Nitinol stent implantation vs balloon angioplasty for lesions in the superficial femoral and proximal popliteal arteries of patients with claudication: three year follow up of the randomized RESILIENT trial.</a></h3>
                             <p class="date">2012;19:1-9</p>
                             <h4>Journal of Endovascular Therapy</h4>
                             <p>Laird JR, Katzen BT, Scheinert D, Lammer J, Carpenter J, Buchbinder M, Dave R, Ansel G, Lansky A, Cristea E, Collins TJ, Goldstein J, Cao AY, <b>Jaff MR</b>.</p>
                         </div>
                         <div class="slide"> <!-- Slide 18 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/22090168" target="_blank">Supervised exercise versus primary stenting for claudication resulting from aortoiliac peripheral artery disease: six-month outcomes from the Claudication: Exercise Versus Endoluminal Revascularization (CLEVER) Trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22090168" target="_blank">Supervised exercise versus primary stenting for claudication resulting from aortoiliac peripheral artery disease: six-month outcomes from the Claudication: Exercise Versus Endoluminal Revascularization (CLEVER) Trial.</a></h3>
                             <p class="date">2012;125:130-9</p>
                             <h4>Circulation: Cardiovascular Interventions</h4>
                             <p>Murphy TP, Cutlip DE, Regensteiner JG, Mohler ER, Cohen DJ, Reynolds MR, Massaro JM, Lewis BA, Cerezo J, Oldenberg NC, Thum CC, Goldberg S, <b>Jaff MR</b>, Steffes MW, Comerota AJ, Ehrman J, Treat-Jacobson D, Walsh ME, Collins T, Badenhop DT, Bronas U, Hirsch AT</p>
                         </div>
                         <div class="slide"> <!-- Slide 17 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/22162141" target="_blank">Starclose vascular closure system (VCS) is safe and effective 9in patients who ambulate early following successful femoral artery access closure—results from the RISE clinical trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22162141" target="_blank">Starclose vascular closure system (VCS) is safe and effective 9in patients who ambulate early following successful femoral artery access closure—results from the RISE clinical trial.</a></h3>
                             <p class="date">2011; Dec 8: epub ahead of print</p>
                             <h4>Circulation: Cardiovascular Interventions</h4>
                             <p>Burke MN, Hermiller J, <b>Jaff MR</b></p>
                         </div>
                         <div class="slide"> <!-- Slide 16 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/21953370" target="_blank">Paclitaxel-eluting stents show superiority to balloon angioplasty and bare metal stents in femoropopliteal disease: 12-month Zilver PTX randomized study results.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/21953370" target="_blank">Paclitaxel-eluting stents show superiority to balloon angioplasty and bare metal stents in femoropopliteal disease: 12-month Zilver PTX randomized study results.</a></h3>
                             <p class="date">2011;4:495-504</p>
                             <h4>Circulation: Cardiovascular Interventions</h4>
                             <p>Dake MD, Ansel GM, <b>Jaff MR</b>, Ohki T, Saxon RR, Smouse HB, Machan LS, Zeller T, Roubin GS, Burket MW, Khatib Y, Snyder SA, Ragheb AO, White JK</p>
                         </div>
                         <div class="slide"> <!-- Slide 15 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/20801673" target="_blank">Two-year clinical evaluation of the Zilver vascular stent for symptomatic iliac peripheral artery disease.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/20801673" target="_blank">Two-year clinical evaluation of the Zilver vascular stent for symptomatic iliac peripheral artery disease.</a></h3>
                             <p class="date">2010;21:1489-94</p>
                             <h4>Journal of Vascular and Interventional Radiology</h4>
                             <p><b>Jaff MR</b>, Katzen BT</p>
                         </div>
                         <div class="slide"> <!-- Slide 14 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/20624206" target="_blank">Protected carotid stenting in high risk patients: results of the Spider Rx arm of the carotid revascularization with eV3 arterial technology evolution trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/20624206" target="_blank">Protected carotid stenting in high risk patients: results of the Spider Rx arm of the carotid revascularization with eV3 arterial technology evolution trial.</a></h3>
                             <p class="date">2010;23:491-8</p>
                             <h4>Journal of Vascular and Interventional Radiology</h4>
                             <p>Safian RD, <b>Jaff MR</b>, Bresnahan JF, Foster M, Bacharach JM, Yadav J, Joye J, Myla S, Kassab E, Mass JT, Ansel GM</p>
                         </div>
                         <div class="slide"> <!-- Slide 13 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/20484101" target="_blank">Nitinol stent implantation versus balloon angioplasty for lesions in the superficial femoral artery and proximal popliteal artery. Twelve-month results from the RESILIENT randomized trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/20484101" target="_blank">Nitinol stent implantation versus balloon angioplasty for lesions in the superficial femoral artery and proximal popliteal artery. Twelve-month results from the RESILIENT randomized trial.</a></h3>
                             <p class="date">2010;3:276-76</p>
                             <h4>Circulation: Cardiovascular Interventions</h4>
                             <p>Laird JR, Katzen BT, Scheinert D, Lammer J, Carpenter J, Buchbinder M, Dave R, Ansel G, Lansky A, Cristea E, Collins TJ, Goldstein J, <b>Jaff MR</b></p>
                         </div>
                         <div class="slide"> <!-- Slide 12 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/20542776" target="_blank">Carotid artery revascularization with the NexStent and Filterwire EX/EZ: 3-year results from the CABERNET trial </a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/20542776" target="_blank">Carotid artery revascularization with the NexStent and Filterwire EX/EZ: 3-year results from the CABERNET trial </a></h3>
                             <p class="date">2010;5:917-24</p>
                             <h4>Eurointervention</h4>
                             <p>Hopkins LN, Myla S, Grube E, Eles G, Dave R, <b>Jaff MR</b>, Allocco D</p>
                         </div>
                         <div class="slide"> <!-- Slide 11 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/20222019" target="_blank">Safety and effectiveness of the Invatec MoMa proximal cerebral protection device during carotid artery stenting: results of the pivotal ARMOUR trial</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/20222019" target="_blank">Safety and effectiveness of the Invatec MoMa proximal cerebral protection device during carotid artery stenting: results of the pivotal ARMOUR trial</a></h3>
                             <p class="date">2010;76:1-8</p>
                             <h4>Catheterization and Cardiovascular Interventions</h4>
                             <p>Ansel G, Hopkins LN, <b>Jaff MR</b>, Rubino P, Bacharach JM, Scheinert D, Myla S, Das T, Cremonesi A</p>
                         </div>
                         <div class="slide"> <!-- Slide 10 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/19006254" target="_blank">Renal artery stenting with non-invasive duplex follow up: 3-year results from the RENAISSANCE renal stent trial</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/19006254" target="_blank">Renal artery stenting with non-invasive duplex follow up: 3-year results from the RENAISSANCE renal stent trial</a></h3>
                             <p class="date">2008;72:853-62</p>
                             <h4>Catheterization and Cardiovascular Interventions</h4>
                             <p>Rocha-Singh K, <b>Jaff MR</b>, Kelley LE</p>
                         </div>
                         <div class="slide"> <!-- Slide 9 -->
-                            <h3>Standardized evaluation and reporting of stent fractures in clinical trials of non-coronary devices</h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/17559108" target="_blank">Standardized evaluation and reporting of stent fractures in clinical trials of non-coronary devices</a></h3>
                             <p class="date">2006;13:701-710</p>
                             <h4>Journal of Endovascular Therapy</h4>
                             <p><b>Jaff MR</b>, Dake MD, Popma JJ, Ansel G, Yoder T</p>
                         </div>
                         <div class="slide"> <!-- Slide 8 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/17154704" target="_blank">Drug-eluting and bare Nitinol stents for the treatment of atherosclerotic lesions in the superficial femoral artery: long-term results from the SIROCCO trial.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/17154704" target="_blank">Drug-eluting and bare Nitinol stents for the treatment of atherosclerotic lesions in the superficial femoral artery: long-term results from the SIROCCO trial.</a></h3>
                             <p class="date">2006;13:701-710</p>
                             <h4>Journal of Endovascular Therapy</h4>
                             <p>Duda SH, Bosiers M, Lammer J, Scheinert D, Zeller T, Oliva V, Tielbeek A, Anderson J, Wiesinger B, Tepe G, Lansky A, <b>Jaff MR</b>, Mudde C, Tielemans H, Beregi JP</p>
                         </div>
                         <div class="slide"> <!-- Slide 7 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/17039509" target="_blank">The safety and efficacy of the Starclose Vascular Closure System: the duplex ultrasound substudy of the CLIP study.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/17039509" target="_blank">The safety and efficacy of the Starclose Vascular Closure System: the duplex ultrasound substudy of the CLIP study.</a></h3>
                             <p class="date">2006;68:684-689</p>
                             <h4>Catheterization and Cardiovascular Interventions</h4>
                             <p><b>Jaff MR</b>, Hadley G, Hermiller JB, Simonton C, Hinohara T, Cannon L, Reisman M, Braden G, Fletcher DR, Zapien M, Chou T, DiDonato K</p>
                         </div>
                         <div class="slide"> <!-- Slide 6 -->
-                            <h3>Stent revascularization for the prevention of cardiovascular and renal events among patients with renal artery stenosis and systolic hypertension: Rationale and design of the CORAL trial.</h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/16824832" target="_blank">Stent revascularization for the prevention of cardiovascular and renal events among patients with renal artery stenosis and systolic hypertension: Rationale and design of the CORAL trial.</a></h3>
                             <p class="date">2006;152:59-66</p>
                             <h4>American Heart Journal</h4>
                             <p>Cooper CJ, Murphy TP, Matsumoto A, Steffes M, Cohen DJ, <b>Jaff MR</b>, Kuntz R, Jamerson K, Reid D, Rosenfield KA, Rundback JH, D’Agostino R, Henrich W, Dworkin L</p>
                         </div>
                         <div class="slide"> <!-- Slide 5 -->
-                            <h3>Protected carotid stenting in high-risk patients with severe carotid artery stenosis.</h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/16890850" target="_blank">Protected carotid stenting in high-risk patients with severe carotid artery stenosis.</a></h3>
                             <p class="date">2006;47:2384-9</p>
                             <h4>Journal of  the American College of Cardiology</h4>
                             <p>Safian RD, Bresnahan JF, <b>Jaff MR</b>, Foster M, Bacharach JM, Maini B, Turco M, Myla S, Eles G, Ansel GM</p>
                         </div>
                         <div class="slide"> <!-- Slide 4 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/16105918" target="_blank">Cryoplasty for the treatment of femoropopliteal arterial disease: results of a prospective multicenter registry.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/16105918" target="_blank">Cryoplasty for the treatment of femoropopliteal arterial disease: results of a prospective multicenter registry.</a></h3>
                             <p class="date">2005;16:1067-1073</p>
                             <h4>Journal of  Vascular and Interventional Radiology</h4>
                             <p>Laird J, <b>Jaff MR</b>, Biamino G, McNamara T, Scheinert D, Zetterlund P, Moen E, Joye JD</p>
                         </div>
                         <div class="slide"> <!-- Slide 3 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/16139124" target="_blank">Evaluation of the safety and efficacy of renal artery stenting after unsuccessful balloon angioplasty: The ASPIRE-2 Study.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/16139124" target="_blank">Evaluation of the safety and efficacy of renal artery stenting after unsuccessful balloon angioplasty: The ASPIRE-2 Study.</a></h3>
                             <p class="date">2004 Oct 7;351(15):1493-501</p>
                             <h4>New England Journal of Medicine</h4>
                             <p>Yadav JS, Wholey MH, Kuntz RE, Fayad P, Katzen BT, Mishkel GJ, Bajwa TK, Whitlow P, Strickman NE, <b>Jaff MR</b>, Popma JJ, Snead DB, Firth BG, Ouriel K.</p>
                         </div>
                         <div class="slide"> <!-- Slide 2 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/15470212" target="_blank">Protected carotid artery stenting vs endarterectomy in high-risk patients</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/15470212" target="_blank">Protected carotid artery stenting vs endarterectomy in high-risk patients</a></h3>
                             <p class="date">2004 Oct 7;351(15):1493-501</p>
                             <h4>New England Journal of Medicine</h4>
                             <p>Yadav JS, Wholey MH, Kuntz RE, Fayad P, Katzen BT, Mishkel GJ, Bajwa TK, Whitlow P, Strickman NE, <b>Jaff MR</b>, Popma JJ, Snead DB, Firth BG, Ouriel K.</p>
                         </div>
                         <div class="slide"> <!-- Slide 1 -->
-                            <h3><a href="http://phstwlp1.partners.org:2111/pubmed/15361558" target="_blank">The Nitinol SMART Stent vs. Wallstent for Suboptimal Iliac Artery Angioplasty: The CRISP-US Trial Results.</a></h3>
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/15361558" target="_blank">The Nitinol SMART Stent vs. Wallstent for Suboptimal Iliac Artery Angioplasty: The CRISP-US Trial Results.</a></h3>
                             <p class="date">2004 Sep;15(9):911-8</p>
                             <h4>Journal of  Vascular and Interventional Radiology</h4>
                             <p>Ponec D, <b>Jaff MR</b>, Swischuk J, Feiring A, Laird J, Mehran M, Popma JJ, Donohoe D, Firth B, Keim E, Snead D.</p>
